terraform-configs/kubernetes/network-policies/alloy-coredns.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alloy
  namespace: observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: alloy-singleton
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
