terraform-configs/kubernetes/network-policies/controller-manager-apiserver.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: controller-manager-apiserver
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      component: kube-controller-manager
  egress:
    - toEntities:
        - kube-apiserver
