terraform-configs/kubernetes/network-policies/scheduler-apiserver.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: scheduler-apiserver
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      component: kube-scheduler
  egress:
    - toEntities:
        - kube-apiserver
